fixing menu button wrapping on header

--- a/chamber/css/main.css
+++ b/chamber/css/main.css
@@ -107,7 +107,7 @@ header h2 {
 #menu_button.responsive::after {
     content: "❌";
 } */
-#menu_button img{
+#menu_button {
     max-width: 30px;
     padding: 0;
     border: 0;
